[fix] license frame height, on small device

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1890,7 +1890,7 @@ div[dropzone] {
 @media screen and (max-width: $screen-sm-max) {
   .modal iframe.iframe-license {
     width: 100%;
-    height: 100%;
+    height: 78%;
   }
 }
 @media screen and (min-width: $screen-md) {
